tests/neg/6890.scala
object Test {
  opaque type A[T] = T match { case Int => Int } // error: Modifier `opaque` is not allowed for this definition
}
